# alfred

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  release_description.md
.github/workflows/: tests.yml
alfred/: bootstrap.py  cli.py  db.py  repositories.py  services.py
alfred.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
alfred/commands/: __init__.py  assets.py  decisions.py  fact.py  help_memory.py  notes.py  person_context.py  purchase.py
alfred/common/: __init__.py  datetime.py
alfred/db/: __init__.py  sqlalchemy_session_factory.py  sqlite_connection_factory.py
alfred/models/: __init__.py  asset.py  decision_record.py  household_fact.py  note.py  person.py  purchase.py
alfred/repositories/: __init__.py  asset_repository.py  decision_record_repository.py  household_fact_repository.py  note_repository.py  person_repository.py  purchase_repository.py
alfred/services/: __init__.py  asset_service.py  decision_record_service.py  household_fact_service.py  note_service.py  person_service.py  purchase_service.py
data/: alfred.db
tests/: test_bootstrap.py  test_cli.py  test_decision_record_model.py
tests/commands/: test_asset_commands.py  test_decision_commands.py  test_fact_commands.py  test_note_commands.py  test_person_commands.py  test_purchase_commands.py  test_root_cli.py
tests/models/: test_asset_model.py  test_decision_record_model.py  test_household_fact_model.py  test_note_model.py  test_person_model.py  test_purchase_model.py
tests/repositories/: test_asset_repository.py  test_decision_record_repository.py  (+4 more)
(+6 files in other folders)
