[project]
name = "alfred"
version = "0.1.0"
description = "A local-first CLI for capturing and reviewing notes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/HHHoegsted/alfred"
Source = "https://github.com/HHHoegsted/alfred"
Issues = "https://github.com/HHHoegsted/alfred/issues"

[project.scripts]
alfred = "alfred.cli:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["alfred*"]
